log
Thu Apr 16 08:26:49 PM UTC 2026: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:49:13: error: expected identifier or ‘(’ before ‘->’ token
   49 |     HashMap -> Mapa -> current = -1;
      |             ^~
hashmap.c:48:15: error: unused variable ‘Mapa’ [-Werror=unused-variable]
   48 |     HashMap * Mapa = (HashMap*)malloc(sizeof(HashMap));
      |               ^~~~
cc1: all warnings being treated as errors
0760022
Thu Apr 16 08:27:21 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:48:32: error: too few arguments to function ‘calloc’
   48 |     HashMap * Mapa = (HashMap*)calloc(sizeof(HashMap));
      |                                ^~~~~~
In file included from test.c:2:
/nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/stdlib.h:675:14: note: declared here
  675 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
a46e1f9
Thu Apr 16 08:28:24 PM UTC 2026: 
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:48:32: error: too few arguments to function ‘calloc’
   48 |     HashMap * Mapa = (HashMap*)calloc(sizeof(HashMap));
      |                                ^~~~~~
In file included from test.c:2:
/nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/stdlib.h:675:14: note: declared here
  675 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
fcb49c4
Thu Apr 16 08:28:42 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:48:32: error: too few arguments to function ‘calloc’
   48 |     HashMap * Mapa = (HashMap)*calloc(sizeof(HashMap));
      |                                ^~~~~~
In file included from test.c:2:
/nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/stdlib.h:675:14: note: declared here
  675 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
e4d1f7e
